--- a/MainMenu_Console/ConsoleUI/ConsoleUI.csproj
+++ b/MainMenu_Console/ConsoleUI/ConsoleUI.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DAO.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
