Class Library and Clean Up
Performed Code Clean Up on our .cs files. The TDI has been deleted and removed and recreated in a seperate Class Library, in order to be published later.

--- a/MainMenu_Console/ConsoleUI/ConsoleUI.csproj
+++ b/MainMenu_Console/ConsoleUI/ConsoleUI.csproj
@@ -73,7 +73,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DAO.cs" />
-    <Compile Include="TDI.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -84,6 +83,12 @@
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TDI_Library\TDI_Library.csproj">
+      <Project>{59729966-6fd7-4030-89b0-cd004c153db8}</Project>
+      <Name>TDI_Library</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
