--- a/MainMenu_Console/ConsoleUI/ConsoleUI.csproj
+++ b/MainMenu_Console/ConsoleUI/ConsoleUI.csproj
@@ -64,12 +64,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Login.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Login.Designer.cs">
-      <DependentUpon>Login.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DAO.cs" />
@@ -77,17 +71,23 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="bin\Debug\proto.sqlite">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Login.resx">
-      <DependentUpon>Login.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\Login_Form\Login_Form.csproj">
+      <Project>{f94f34d2-c8e6-4793-9e8f-29cb57a74c3e}</Project>
+      <Name>Login_Form</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TDI_Library\TDI_Library.csproj">
       <Project>{59729966-6fd7-4030-89b0-cd004c153db8}</Project>
       <Name>TDI_Library</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Utilities\Utilities.csproj">
+      <Project>{a1303862-f804-4c3a-95aa-6dd6ce7635c3}</Project>
+      <Name>Utilities</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
