Copied TDI_Libary and Uitilities to .NET Standard
We now just need to fix the database stuff in the .NET Standard DAO class because SQLite does not seem to work with .NET Standard. Also, all of the new .NET Standard are now referenced by the UWP project.

--- a/MainMenu_Console/ConsoleUI_UWP/ConsoleUI_UWP.csproj
+++ b/MainMenu_Console/ConsoleUI_UWP/ConsoleUI_UWP.csproj
@@ -154,6 +154,20 @@
       <Version>6.2.8</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ConsoleUI_NET_Standard\ConsoleUI_NET_Standard.csproj">
+      <Project>{30653c23-0944-4e8a-b789-07efcbde0029}</Project>
+      <Name>ConsoleUI_NET_Standard</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TDI_Library_NET_Standard\TDI_Library_NET_Standard.csproj">
+      <Project>{b1776408-82af-4f06-8e73-18dd7e9ba987}</Project>
+      <Name>TDI_Library_NET_Standard</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Utilities_NET_Standard\Utilities_NET_Standard.csproj">
+      <Project>{e8768f54-fc02-4347-b49e-0b5b964606f4}</Project>
+      <Name>Utilities_NET_Standard</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
