--- a/MainMenu_Console/ConsoleUI_NET_Standard/ConsoleUI_NET_Standard.csproj
+++ b/MainMenu_Console/ConsoleUI_NET_Standard/ConsoleUI_NET_Standard.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.3" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.112" />
+  </ItemGroup>
+
 </Project>
