--- a/MainMenu_Console/ConsoleUI_UWP/ConsoleUI_UWP.csproj
+++ b/MainMenu_Console/ConsoleUI_UWP/ConsoleUI_UWP.csproj
@@ -153,6 +153,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.10</Version>
     </PackageReference>
+    <PackageReference Include="System.Data.SQLite">
+      <Version>1.0.112</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ConsoleUI_NET_Standard\ConsoleUI_NET_Standard.csproj">
