Added Login_UWP.xaml and Registration_UWP.xaml
I plan to copy the two existing forms from ConsoleUI in the UWP Project

--- a/MainMenu_Console/ConsoleUI_UWP/ConsoleUI_UWP.csproj
+++ b/MainMenu_Console/ConsoleUI_UWP/ConsoleUI_UWP.csproj
@@ -144,9 +144,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Login_UWP.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Registration_UWP.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
